# auth-service/src/main/java/com/t1/popcon/auth/identity/dto/PhoneChangeResponse.java
@@ -1,0 +1,9 @@
+package com.t1.popcon.auth.identity.dto;
+
+/**
+ * 휴대폰 번호 변경 성공 응답 DTO
+ */
+public record PhoneChangeResponse(
+        String phone
+) {
+}
